# upload-controller-service

./: .mandatory_files  .pre-commit-config.yaml  .static_files  Dockerfile  LICENSE  README.md  config_schema.json  example-config.yaml  example_config.yaml  openapi.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  user.pub  user.sec
.devcontainer/: .dev_config.yaml  Dockerfile  dev_install  dev_launcher  devcontainer.json  docker-compose.yml  example-config.yaml  license_header.txt
.github/workflows/: check_openapi_spec.yaml  dev_cd.yaml  unit_and_int_tests.yaml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: description.md
db_migration/alembic/: env.py
db_migration/alembic/versions/: 20220104_174013_cdad7efc63be_initialize_database.py  20220104_180417_acb2553cf589_update_to_model_added_file_name_fixes.py  20220110_155610_4b41e84f7aac_study_id_to_grouping_label.py  20220120_170016_ec66a0a3186b_additional_file_information_in_database.py  (+3 more)
lock/: requirements-dev.txt  requirements.txt
my_microservice/: config.py
scripts/: check_mandatory_and_static_files.py  get_config_schema_and_example.py  get_package_name.py  license_checker.py  openapi_from_app.py  update_openapi_docs.py  update_static_files.py
scripts/script_utils/: fastapi_app_location.py
src/ucs/: __init__.py  __main__.py  cli.py  config.py  container.py  inject.py  main.py
src/ucs/core/: models.py  (+3 more)
tests/: __init__.py  test_api.py  test_api_journey.py  test_edge_cases.py  test_file_service.py  test_psql_file.py  test_psql_uploads.py  test_rabbitmq_consume.py  test_rest.py  test_typical_journey.py  test_upload_service.py
tests/fixtures/: __init__.py  amqp.py  api.py  config.py  example_data.py  joint.py  module_scope.py  module_scope_fixtures.py  psql.py  pubsub.py  rest.py  s3.py  state.py  test_config.yaml  utils.py
tests/integration/: __init__.py  test_api.py  test_pubsub.py  test_rabbitmq_consume.py  test_upload_service.py
tests/unit/: __init__.py  test_core.py  test_core_greeting.py  test_dummy.py  test_psql.py  test_psql_db_dao.py  test_rabbitmq_produce.py  test_upload_service.py
ucs/: __init__.py  __main__.py  cli.py  config.py  container.py  main.py
ucs/adapters/: __init__.py
ucs/core/: file_service.py  models.py  upload_service.py
ucs/domain/: file_service.py  models.py  part_calc.py  upload.py  upload_service.py
ucs/ports/: __init__.py  upload_dao.py
ulc/: __main__.py  cli.py  config.py  container.py  main.py
ulc/adapters/: __init__.py
ulc/domain/: upload.py
upload_controller_service/: __init__.py  __main__.py  config.py  models.py
upload_controller_service/api/: __init__.py  deps.py  main.py
upload_controller_service/core/: __init__.py  __init__.py.c1896d79efde6928de480e43112eb5f8.tmp  main.py
upload_controller_service/dao/: __init__.py  db.py  db_models.py
upload_controller_service/domain/: exceptions.py  interfaces.py  main.py  models.py  upload.py
upload_controller_service/pubsub/: __init__.py  main.py  publish.py  subscribe.py
(+110 files in other folders)
