# Copyright 2021 - 2022 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = ucs
version = attr: ucs.__version__
description = The Upload-Controller Service (UCS) manages uploads to a S3 inbox bucket.
url = https://github.com/ghga-de/upload-controller-servicee
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ghga-service-chassis-lib[api,pubsub,s3]==0.15.0
    hexkit[mongodb]==0.5.1

python_requires = >= 3.9

[options.entry_points]
console_scripts =
    ucs = ucs.__main__:cli

[options.extras_require]
dev =
    ghga-service-chassis-lib[dev]==0.15.0
    httpx==0.23.0
    nest-asyncio==1.5.6
all =
    %(dev)s


[options.packages.find]
exclude = tests
